# collaborative_ml_benchmarking

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  mytable.tex  pyproject.toml  results_fl.pickle  run.sh
fed_ml_horizontal/benchmarking/: all_data_model.py  baseline_model.py  data_splitting.py  federated_learning.py  model.py  one_model_per_client.py  plotting.py  run_scenarios.py  summaries.py  tf_utils.py
fed_ml_horizontal/config/: project.yml  scenarios.yml
fed_ml_horizontal/etl/: load_data.py
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210717-122239/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210720-102012/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210720-144734/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210720-181601/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210720-192253/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210721-091909/: config.yml
fed_ml_horizontal/outputs/HFL_KIT_PITTING_CLASS_20210721-191015/: config.yml
fed_ml_horizontal/pipeline/: run_pipeline.py
fed_ml_horizontal/util/: config.py  logging.py
notebooks/boxplot_transformer/: boxplot_transformer.ipynb
notebooks/boxplot_transformer/csvs/: performance.csv
notebooks/table_transformer/: table_generator.ipynb
presentations/final_presentation/: 20211020_Abschlusspräsentation_FL_Anna_Hensel.pptx  20211020_Abschlusspräsentation_FL_Anna_Hensel_with_animations.pptx
thesis/share_calculation_for_simulations/: 20210826_client_shares_MA_Anna.xlsx
(+727 files in other folders)
